# the_farmer

./: .gitignore  AUTHORS.md  CITATION.cff  LICENSE  LICENSE.txt  Pipfile  README.md  pyproject.toml  requirements.txt
config/: config.psfex  config.py  config.py.old  config_irac.py  config_psfex.sex  param_psfex.sex  translate.py
docs/: Makefile  example.py  how_to_farm.ipynb  requirements.txt
docs/source/: conf.py  faq.rst  index.rst  installation.rst  pipeline.rst
docs/source/api/: farmer.rst  index.rst  utils.rst
farmer/: __init__.py  brick.py  group.py  image.py  mosaic.py  utils.py  version.py
notebooks/: Farmer_test1.ipynb  How_To_Farm.ipynb  Untitled.ipynb  ndof_test.ipynb
sandbox/: showmewhatyougot.ipynb
src/core/: blob.py  brick.py  config.py  interface.py  mosaic.py  subimage.py  utils.py  visualization.py
src/data/: brick.py  forcedphot.py  subimage.py
src/tools/: add_regions.py  calculate_effective_area.py  cat_rebricker.py  collect_cat.py  combine_aux.py  combine_cat.py  estimate_effective_area.py  fix_wcs_headers.py  forcephot.py  format_lephare.py  make_mosaic.py  make_psf.py  smart_collector.py
src/visualization/: checkphot.py  debug_tree.py
the_farmer/: blob.py  brick.py  interface.py  mosaic.py  subimage.py  utils.py
